Closed Bug 339945 Opened 18 years ago Closed 17 years ago

Contextmenu doesn't disappear correctly when Firefox is in background

Categories

(Core :: Widget: Cocoa, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha6

People

(Reporter: hwaara, Assigned: jaas)

References

Details

Attachments

(1 file)

Reproduced using trunk 20050531 (firefox cocoa):

1. Make another app the foreground app, keeping a firefox window visible.
2. Right-click the browser window's content area: it brings up a context menu
3. Click the content area (while the context menu is up)

Actual result:

When you've clicked the content area, Firefox becomes the foreground app, but with the context menu still open.

Expected result:

On the first click, the contextmenu should disappear. The second click should bring Firefox to the foreground.
confirmed
Status: NEW → ASSIGNED
(In reply to comment #0)
> Reproduced using trunk 20050531 (firefox cocoa):
> 
> 1. Make another app the foreground app, keeping a firefox window visible.
> 2. Right-click the browser window's content area: it brings up a context menu
> 3. Click the content area (while the context menu is up)
> 
> Expected result:
> 
> On the first click, the contextmenu should disappear. The second click should
> bring Firefox to the foreground.
> 
Actually, I would expect that the first, right-click on firefox would both bring
up the context menu for whatever was right-clicked upon *and* bring firefox to
the foreground.

Speaking of odd clicking behavior, maybe this is related:

My Personal Toolbar is a collection of Folders, not individual Links. So, when
I click on one, I get a drop-down menu. At that point, if I click on *any* other
control (even the "X" control in the upper right corner that should close the
window, or another Personal Toolbar Folder) it simply negates the drop-down list
instaed of acting on the other control.

Jim H. (aka CuriousJ)
Flags: blocking1.9?
Flags: blocking1.9? → blocking1.9+
Target Milestone: --- → mozilla1.9alpha6
Attached patch fix v1.0Splinter Review
This fixes this bug and also fixes the bug where clicks in other applications don't roll up our context menus.
Attachment #265136 - Flags: review?(cbarrett)
Comment on attachment 265136 [details] [diff] [review]
fix v1.0

I'm only seeing this actually fix the other bug you mentioned. I tried the STR in the original bug, and it still appeared.
Attachment #265136 - Flags: review?(cbarrett) → review-
Comment on attachment 265136 [details] [diff] [review]
fix v1.0

Hrm, I just tried relaunching, and it works now. I guess I was using the wrong copy of Minefield, or it was that weird Carbon/Cocoa confusion again.
Attachment #265136 - Flags: review- → review+
Attachment #265136 - Flags: superreview?(roc)
Comment on attachment 265136 [details] [diff] [review]
fix v1.0

Oh, one other comment. Shouldn't we be using a* instead of in* for the function arguments?
Comment on attachment 265136 [details] [diff] [review]
fix v1.0

Yes, use a*
Attachment #265136 - Flags: superreview?(roc) → superreview+
Blocks: 368077
landed on trunk
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Depends on: 381448
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: