Contextmenu doesn't disappear correctly when Firefox is in background. Also, Firefox doesn't dismiss context menu when it is in the background and a user clicks on another application. b=339945 r=cbarrett sr=roc