widget/src/cocoa/nsToolkit.h
@@ -95,6 +95,8 @@ protected:
   nsresult           RegisterForSleepWakeNotifcations();
   void               RemoveSleepWakeNotifcations();
 
+  void               RegisterForAllProcessMouseEvents();
+
 protected:
 
   bool               mInited;
